# NightManager

./: .env.example  .gitignore  AGENTS.md  ETF_1629.csv  _check_syntax.py  pyproject.toml  requirements.txt  run_research.py  temp_requirements.txt  日米ラグ.code-workspace
.venv-mac/: pyvenv.cfg
.windsurf/plans/: model_improvement_plan.md
.windsurf/workflows/: backtest.md  daily-production.md  run-tests.md  shadow-monitor.md  syntax-check.md  walkforward-validation.md
Papers/: 日米業種リードラグ.md
archive/: check_inf_values.py  diagnose_backtest.py  timing_test.py  vix_ic_analysis.py  vix_return_dispersion.py
archive/deprecated_v1_fallback/: load_v1_fallback_weights.py
archive/experiments/: analyze_fine_results.py  analyze_grid_rr_vs_ar.py  audit_p6_baselines.py  backtest_ensemble_robustness.py  compare_runs.py  (+22 more)
configs/: final_model_selection.yaml  production.yaml  production_residual_blpx.yaml  production_v2_primary_ruleD.yaml  research_blp_enhanced.yaml  research_blp_enhanced_refined.yaml  research_blp_projection.yaml  research_p0_p4_ensemble.yaml  research_rrr_projection.yaml  research_us_residual_prior.yaml  research_us_residualization.yaml  scenario_a.yaml  scenario_b.yaml  scenario_c.yaml  sprint1.yaml  sprint2c_lob_slippage_aum1m.yaml  sprint3a_hinge_features_aum1m.yaml
creds/: e_api_authid.txt  e_api_private_key.pem  e_api_private_key_example.pem  e_api_public_key.pem
data/: decision_cache.npz  jp_sector_basket_universe.csv  mock_opens.csv
docs/: ARCHITECTURE.md  MODE_USAGE_GUIDE.md  PRODUCTION_DECISION_GUIDE.md  README.md  REFACTORING_PLAN.md  SCHEDULER_SETUP.md  conf.py  index.rst  model_summary_for_improvement.md  modules.rst  quants.md  スタック再発防止策.md  ベンチマーク比較レポート.md  モデル技術仕様書.md  日次運用手順書.md  研究メモ202606.md  運用方針書.md  運用方針書オリジナル.md
reports/: b8_leak_review_critical.md  code_review_20260713.md  code_review_20260716.md  code_review_fractional_diff_local_changes.md  fractional_diff_walkforward_audit_report.md  nonlinear_shrinkage_walkforward_report.md  phase3_walkforward_validation_report.md
results/: ml_comparison_report.md  var_es_history.csv
scratch/: compare_configs.py  test_tachibana_login.py
scripts/: analyze_gap_bias.py  analyze_paradox_robustness.py  com.leadlag.decision.plist  compare_bt_vs_actual.py  compare_gap_matrices.py  experiment_alternative_leadlag.py  experiment_dynamic_sector_prior.py  experiment_execution_efficiency.py  experiment_fundamental_improvements.py  experiment_multi_horizon_blend.py  experiment_novel_alpha.py  experiment_novel_alpha_walkforward.py  experiment_parameter_sensitivity.py  experiment_persistence_check.py  experiment_persistence_comparison.py  experiment_phase3a_walkforward.py  experiment_sector_prior_optimization.py  experiment_sector_prior_wfo.py  finalize_sprint2_report.py  fix_mh_rankreversal.py  fix_pit_history.py  print_top5_ref_results.py  run_close_positions.bat  run_decision.bat  run_overnight_holding_backtest.py  run_production_backtest.py  run_selective_overnight_backtest.py  run_sprint0_diagnostics.py  run_sprint0_qa.py  run_sprint1_aum1m_tachibana.py  run_sprint1_experiments.py  run_sprint2_cost_aware_aum1m.py  run_sprint2b_qa.py  run_sprint2c_lob_slippage.py  run_sprint3a_hinge_features.py  run_sprint3b_hinge_interactions.py  run_tests_parallel.sh  run_v2_backtest.py  test_tachibana_connection.py  test_tachibana_demo_order.py  (+1 more)
src/: backtest_config.py  config.py  data_loader.py  example_login.py  kabu_client.py  performance.py  production.py  prof_stat  results_format.py  strategy.py
tests/: conftest.py  test_production_p8p3_blpx.py  test_sector_relative_ensemble.py  test_sector_relative_ensemble_blp.py  test_sector_relative_ensemble_blp_enhanced.py  test_sector_relative_ensemble_rrr.py  test_us_residual_prior.py  test_us_residualization.py
tools/: analyze_blp_enhanced_refined.py  analyze_grid_results.py  analyze_total_return_diff.py  apply_production_p8p3_blpx.py  audit_covariance_optimization_consistency.py  audit_dynamic_gross_cost_and_readiness.py  audit_gap_distribution_before_dynamic_gross.py  audit_risk_adjusted_ranking_consistency.py  backtest_blp_enhanced.py  backtest_blp_projection.py  backtest_p0_p4_ensemble.py  backtest_rrr_projection.py  backtest_sector_relative_ensemble.py  backtest_us_residual_prior.py  backtest_us_residualization.py  build_p8p3_blpx_shadow_run_package.py  compare_ml_vs_pca.py  compare_three_strategies.py  compute_gap_adjusted_distribution.py  compute_structured_prediction_covariance.py  diagnose_us_vol_states.py  experiment_m_sector_refinement.py  final_model_selection.py  inspect_decision_cache.py  inspect_decision_cache_contents.py  monitor_p8p3_blpx_shadow_performance.py  run_backtests_2016_compare.py  run_daily_p8p3_blpx_shadow.py  run_daily_production_v2.py  run_daily_sector_relative_ensemble.py  search_optimal_style_combination.py  simulate_hybrid_execution.py  validate_covariance_aware_optimization.py  validate_distribution_prediction_step1.py  validate_dynamic_gross_from_gap_ir.py  validate_production_p8p3_blpx.py  validate_production_residual_blpx.py  validate_risk_adjusted_ranking_from_gap_distribution.py
(+727 files in other folders)
