[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "leadlag"
version = "2.1.0"
description = "日米ラグ市場中立戦略 — Lead-Lag Market-Neutral Strategy"
readme = "docs/ARCHITECTURE.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "yfinance>=1.2.0",
    "pandas>=3.0.0",
    "numpy>=2.0.0",
    "matplotlib>=3.10.0",
    "scipy>=1.17.0",
    "requests>=2.32.0",
    "python-dotenv>=1.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
kabu-login = [
    "pyautogui>=1.0.0",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.2",
]
gmail = [
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.80.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
leadlag = "production:main"

# ---------------------------------------------------------------------------
# Packaging — src layout
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ---------------------------------------------------------------------------
# Ruff linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP007",  # use X | Y for union type hints (keep Optional for 3.11 compat)
]

[tool.ruff.lint.isort]
known-first-party = [
    "broker", "config", "data", "data_loader",
    "domain", "infrastructure", "services",
    "strategy", "performance", "production",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src/test"]
pythonpath = ["src"]
addopts = "-v --tb=short"
